# pick-midi

./: .gitignore  CMakeLists.txt  README.md  TODO  TODO.md  setup.sh  test
cmake/: FindFFTW.cmake  FindMATH.cmake
pick-midi/: TODO  makefile
pick-midi/src/: const.h  defs.h  fft.c  fft.h  fft_note_finder.c  fft_note_finder.h  pickmidi.c
src/: const.h  defs.h  fft.c  fft_note_finder.c  freq_finder.c  freq_finder.h  note_finder.c  note_finder.h  pickmidi.c
